tests/NormalTests/paczka1/fuzzy1/82707616.err
Error in line 2: qVH2Ej7XeBI A744 71,4
Error in line 3: qVH2Ej7XeBI A724 28,5
Error in line 13: o2GXXP A744 81,2
Error in line 7: 5XepBvcepm S465 56,9
Error in line 16: S465 S465 88,1
Error in line 17: 5XepBvcepm A724 28,2
Error in line 6: qVH2Ej7XeBI S74 38,8
Error in line 15: o2GXXP A724 82,9
Error in line 25: o2GXXP S465 28,7
Error in line 36: QyZVtpZp A744 -2,0
